UI fixes for Editor Preview and long Instrument List names (#931)
* Fix preview scrollbars visible on Windows even though nothing to scroll

* Apply text ellipsis to instrument name

* Build dist files

* Apply separate class for instrument name ellipsis

* Bump version

--- a/src/scss/sections/components/financial.scss
+++ b/src/scss/sections/components/financial.scss
@@ -61,6 +61,12 @@
   color: rgb(77, 77, 77);
 }
 
+.instrument-name-ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .instrument-rate {
   font-size: 0.8em;
   color: rgb(77, 77, 77);
